fixes unnecessary bi-directional overflow

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -5,7 +5,7 @@
 
 .nav-container{
 	position:absolute;
-	width: 98.65vw;
+	width: 100%;
 	height: 13vh;
 	z-index: 1;
 	top: 0;
