--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,5 +1,5 @@
 main {
-    width: 98.65vw;
+    width: 100%;
     height: 56.2vw;
 	background-image: url("/assets/img/desk.jpg");
 	background-repeat: no-repeat;
